<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="student"
            type="com.ls.voluntaryplatformapp.model.Student" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_bg_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine_tv_title"
                android:textSize="@dimen/sp_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.ls.voluntaryplatformapp.view.CustomImageView
                android:id="@+id/customImageView"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.465"
                app:isCircle="@{true}"
                app:image_url="@{student.avatarUrl}"
                tools:src="@drawable/icon_avatar" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="陈某某"
                android:text="@{student.realName}"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toEndOf="@+id/customImageView"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.365" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.135"
                app:layout_constraintStart_toEndOf="@+id/customImageView"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.188"
                tools:text="志愿时长"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.0"
                tools:text="0小时"
                android:text="@{String.valueOf(student.score)}"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_text_green"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/sp_20"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:id="@+id/mine_iv_joined_group"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/icon_joined_group"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_mine_tv_joined_group"
                    android:layout_toEndOf="@+id/mine_iv_joined_group"
                    android:layout_marginStart="@dimen/dp_20"
                    android:textSize="@dimen/sp_18"/>

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:src="@drawable/icon_right_arrows"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:id="@+id/mine_iv_service_time"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/icon_service_time"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_mine_tv_service_time"
                    android:layout_toEndOf="@+id/mine_iv_service_time"
                    android:layout_marginStart="@dimen/dp_20"
                    android:textSize="@dimen/sp_18"/>

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:src="@drawable/icon_right_arrows"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:id="@+id/mine_iv_user_info"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/icon_user_info"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_mine_tv_user_info"
                    android:layout_toEndOf="@+id/mine_iv_user_info"
                    android:layout_marginStart="@dimen/dp_20"
                    android:textSize="@dimen/sp_18"/>

                <com.ls.voluntaryplatformapp.view.CustomImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:src="@drawable/icon_right_arrows"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_10"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</layout>